--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: TEST
+name: BUILD
 
 # Controls when the action will run. 
 on:
@@ -38,5 +38,5 @@ jobs:
     - name: Upload results
       uses: actions/upload-artifact@v1.0.0
       with:
-        name: build-bin
+        name: arithmetic-circuits
         path: build
